Implement new changes php 8 related.
