# app/Http/Controllers/Controller.php
@@ -2,19 +2,20 @@
 
 namespace App\Http\Controllers;
 
-/**
- * @OA\Info(
- *    title="Swagger with Laravel",
- *    version="1.0.0",
- * )
- * @OA\SecurityScheme(
- *     type="http",
- *     securityScheme="bearerAuth",
- *     scheme="bearer",
- *     bearerFormat="JWT"
- * )
- */
+use OpenApi\Attributes as OA;
 
+
+#[OA\Info(
+    title: "Swagger with Laravel",
+    version: "1.0.0",
+)]
+
+#[OA\SecurityScheme(
+    type: "http",
+    securityScheme: "bearerAuth",
+    scheme: "bearer",
+    bearerFormat: "JWT"
+)]
 abstract class Controller
 {
     //
